--- a/css/style.css
+++ b/css/style.css
@@ -61,21 +61,26 @@
     border-radius: 8px;
 }
 
-@media (max-width : 320px){
-    .body{
+@media (max-width: 320px) {
+    .container {
         height: 100%;
         background-size: 100vw 100vh;
+        overflow: hidden;
     }
-    
-    #scoreBox{
+
+    #scoreBox {
         top: 30px;
         right: 130px;
-        font-size: 20px;   
+        font-size: 20px;
     }
-    
-    #hiscoreBox{
+
+    #hiscoreBox {
         top: 59px;
         right: 110px;
-        font-size: 20px;   
+        font-size: 20px;
+    }
+
+    #board{
+        margin-top : 20px;
     }
 }
