--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,9 @@
 }
 
 @media (max-width: 320px) {
-    .container {
+    .body {
         height: 100%;
-        background-size: 100vw 100vh;
+        background-size: 100vw 90vh;
         overflow: hidden;
     }
 
