--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
     display: grid;
     grid-template-rows: repeat(18, 1fr);
     grid-template-columns: repeat(18, 1fr);
+    margin-top:5px;
 }
 
 .head{
@@ -61,26 +62,26 @@
     border-radius: 8px;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 300px) {
     .body {
-        height: 100%;
+        height: 90vh;
         background-size: 100vw 90vh;
         overflow: hidden;
     }
 
     #scoreBox {
-        top: 30px;
+        top: 20px;
         right: 130px;
         font-size: 20px;
     }
 
     #hiscoreBox {
-        top: 59px;
+        top: 50px;
         right: 110px;
         font-size: 20px;
     }
 
     #board{
-        margin-top : 20px;
+        margin-top : 5px;
     }
 }
